# djangoSearch

./: .gitignore  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
search/: admin.py  models.py  urls.py  views.py
search/migrations/: 0001_initial.py
search/templates/: search.html
search/templates/search/: searchList.html
static/css/: base.css
templates/: base.html  index.html
