[tool.poetry]
name = "djangosearch"
version = "0.1.0"
description = ""
authors = ["wsligor <wsligor@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
